src/main/java/lesson/example/java/core/lesson07/isp/bad/Penguin.java
package lesson.example.java.core.lesson07.isp.bad;

public class Penguin implements Bird {
    @Override
    public void fly() {
        //
    }

    @Override
    public void swim() {
        System.out.println("Uiiiii");
    }
}
